--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3"
+        "php": ">=5.7"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
@@ -18,5 +18,6 @@
         "psr-4": {
             "Stockfeel\\Monitor_PHP\\": "src/"
         }
-    }
+    },
+    "minimum-stability": "dev"
 }
