[feat]update compose.json

--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,6 @@
             "Stockfeel\\Monitor_PHP\\": "src/"
         }
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
