[feat]update composer.json

--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,6 @@
             "Stockfeel\\Monitor_PHP\\Tests": "tests/"
         }
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
